update category, delete
