# src/category/category.routes.ts
@@ -1,7 +1,14 @@
 import express from "express";
-import { addItem, getAllItems } from "@/category/controllers";
+import {
+  addItem,
+  getAllItems,
+  getItem,
+  updateItem,
+  removeItem,
+} from "@/category/controllers";
 import schemas from "@/validation/validation_schemas/category.schemas";
 import validator from "@/validation/zod.schema.validator";
+import paramDepvValidator from "@/validation/zod.schema.paramDependencyValidator";
 const router = express.Router();
 /**
  * @method GET
@@ -15,4 +22,26 @@ router.get("/", getAllItems);
  * @permession ADMIN
  */
 router.post("/", validator(schemas.categoryAddSchema), addItem);
+
+router
+  .route("/:id")
+  /**
+   * @method GET
+   * @url base_url/api/v1/categories/:id
+   * @permession ADMIN
+   */
+  .get(getItem)
+  /**
+   * @method PUT
+   * @url base_url/api/v1/categories/:id
+   * @permession ADMIN
+   */
+  .put(paramDepvValidator(schemas.categoryUpdateSchema), updateItem)
+  /**
+   * @method DELETE
+   * @url base_url/api/v1/categories/:id
+   * @permession ADMIN
+   */
+  .delete(removeItem);
+
 export default router;
