# src/category/controllers/index.ts
@@ -1,3 +1,5 @@
 export { default as addItem } from "@/category/controllers/addItem";
+export { default as updateItem } from "@/category/controllers/updateItem";
 export { default as getAllItems } from "@/category/controllers/getAllItems";
 export { default as getItem } from "@/category/controllers/getItem";
+export { default as removeItem } from "@/category/controllers/removeItem";
